fix padding layout bug
improve room table description on mobile

--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -3,3 +3,19 @@
 .pointer {
   cursor: pointer;
 }
+
+.layout-padding {
+  padding: 0 50px 30px;
+}
+.layout-content-padding {
+  padding: 24;
+}
+
+@media screen and (max-width: 639px) {
+  .layout-padding {
+    padding: 0 20px 10px;
+  }
+  .layout-content-padding {
+    padding: 24;
+  }
+}
